<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingTop="16dp">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bot_o_1"
        android:layout_alignParentBottom="true"
        android:id="@+id/btn1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bot_o_2"
        android:id="@+id/btn2"
        android:layout_marginLeft="24dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bot_o_3"
        android:id="@+id/btn3"
        android:layout_toRightOf="@id/btn2"
        android:layout_alignBottom="@id/btn2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eu_sou_o_texto_dentro_do_relative_layout"
        android:layout_below="@id/btn2"
        android:layout_alignLeft="@id/btn2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn1">

        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bot_o_1"></Button>
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bot_o_2"></Button>

    </LinearLayout>
</RelativeLayout>
